<resources>
    <string name="app_name">Niramay</string>

    <!-- Network Connection -->
    <string name="no_internet">No Internet Connection</string>
    <string name="error_something_went_wrong">Something went wrong!</string>

    <!-- Session Expire Dialog -->
    <string name="txt_logout_401">Your session has been expired. Please login again.</string>

    <string name="project_vruddhi">પ્રોજેક્ટ વ્રુદ્ધિ</string>
    <string name="welcome_to_niramay">Welcome to Niramay</string>
    <string name="dedicated_to_improve_">Dedicated to improve health and well-being of people of India</string>
    <string name="a_holistic_approach_to">A Holistic approach to reduce anaemia and malnutrition in Okhamandal Taluka</string>
    <string name="login">Log in</string>
    <string name="log_into_account">Log into account</string>
    <string name="email">Email</string>
    <string name="email_hint">example@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="by_using_niramay">By using Niramay, you agree to the</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_title">We will email you\na link to reset your password.</string>
    <string name="send">Send</string>
    <string name="back_to_login">Back to login</string>
    <string name="pregnant_woman">Pregnant Woman</string>
    <string name="lbw_child">LBW Child</string>
    <string name="sam_child">SAM Child</string>
    <string name="camp">Camp</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="save_and_next">Save and Exit</string>
    <string name="skip_to_next">Skip to Next</string>
    <string name="name">Name</string>
    <string name="husband_name">Husband Name</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_hint">YYYY/MM/DD</string>
    <string name="age_in_years">Age in years</string>
    <string name="village">Village</string>
    <string name="Address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_lmp">Date of LMP</string>
    <string name="current_month_of_pregnancy">Current Month of Pregnancy</string>
    <string name="height_in_cm">Height in cm</string>
    <string name="pre_pregnancy_or_first_timer">Pre-pregnancy or first timer</string>
    <string name="weight_in_kg">Weight in kg</string>
    <string name="screening">Screening</string>
    <string name="registration">Registration</string>
    <string name="services">Services</string>
    <string name="exit">Exit</string>
    <string name="number_of_pregnancy">Number of Pregnancy</string>
    <string name="including_the_present_pregnancy">including the present pregnancy</string>
    <string name="number_of_live_child">Number of Live Child</string>
    <string name="number_of_abortion">Number of Abortion</string>
    <string name="education_of_mother">Education of Mother</string>
    <string name="occupation_of_mother">Occupation of Mother</string>
    <string name="any_illness">Any illness</string>
    <string name="illness_note">illness Note</string>
    <string name="registered_with_anm_govt_hospital">Registered with ANM/Govt Hospital for ANC?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="MODNormal">Normal</string>
    <string name="MODCesarean">Cesarean</string>
    <string name="MODInstrumentation">Instrumentation</string>
    <string name="current_weight_in_kg">Current Weight in kg</string>
    <string name="current_height_in_cm">Current Height in cm</string>
    <string name="hemoglobin_level_in_cm">Hemoglobin level in mg/dl</string>
    <string name="counselling_details">Counselling Details</string>
    <string name="nutrition_kit_given">Nutrition Kit given</string>
    <string name="hand_washing_soap_given">Hand-washing soap given</string>
    <string name="counselled_about_diet_during_pregnancy">Counselled about diet during pregnancy</string>
    <string name="counselled_about_hand_wash_and_hygiene">Counselled about hand-wash and hygiene</string>
    <string name="counselled_about_treatment_for_anemia">Counselled about treatment for anemia(if anemia present)</string>
    <string name="nutrition_kit_photo">Nutrition Kit Photo</string>
    <string name="upload">Upload</string>
    <string name="any_complication">Any Complication</string>
    <string name="complication_note">Complication Note</string>
    <string name="add_service">+ Add Service</string>
    <string name="delivery_of_child">Delivery of Child</string>
    <string name="date_of_delivery">Date of Delivery</string>
    <string name="place_of_delivery">Place of Delivery</string>
    <string name="mode_of_delivery">Mode of Delivery</string>
    <string name="normal">Normal</string>
    <string name="cesarean">Cesarean</string>
    <string name="instrumentation">Instrumentation</string>
    <string name="duration_of_pregnancy">Duration of pregnancy</string>
    <string name="preterm">Pre term</string>
    <string name="full_term">Full term</string>
    <string name="birth_weight">Birth weight</string>
    <string name="complication_to_mother">Complication to Mother</string>
    <string name="migration_within_project_area">Migration within Project Area</string>
    <string name="name_of_village">Name of Village</string>
    <string name="miscarriage">Miscarriage</string>
    <string name="death_of_mother">Death of Mother</string>
    <string name="reason_of_death">Reason of death</string>
    <string name="submit">Submit</string>
    <string name="dark_dot">•</string>
    <string name="logout">Logout</string>
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="service_1">Service 1</string>
    <string name="service_2">Service 2</string>
    <string name="service_3">Service 3</string>
    <string name="select_place_of_delivery">Select place of delivery</string>

    <string name="temp_string">We have sent and email to abc@xyz.com with instructions to reset your password.</string>
    <string name="temp_string_2">Patient 1: Meenaben parmar</string>
    <string name="temp_string_3">32 years</string>
    <string name="temp_string_4">Rampur</string>
    <string name="temp_string_5">received</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="DiliverySpace">
        <item>Medical College Hospital</item>
        <item>District Hospital</item>
        <item>Sub District Hospital</item>
        <item>CHC</item>
        <item>PHC</item>
        <item>Private Hospital</item>
        <item>Home</item>
        <item>In Transit</item>
    </string-array>
</resources>