<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signin.LoginFragment"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/form_text_size" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/form_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/form_text_size" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textSize="@dimen/form_text_size" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot_password_"
                android:textColor="@color/black"
                android:textSize="@dimen/form_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/by_using_niramay"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/form_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/terms_and_privacy_policy"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/form_text_size" />

    </LinearLayout>
</layout>