<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/includeProgress"
                layout="@layout/screening_progress" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:text="@string/current_weight_in_kg"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_text_size" />

                <EditText
                    style="@style/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:textSize="@dimen/form_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:text="@string/current_height_in_cm"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_text_size" />

                <EditText
                    style="@style/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:textSize="@dimen/form_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:text="@string/hemoglobin_level_in_cm"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_text_size" />

                <EditText
                    style="@style/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:textSize="@dimen/form_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:text="@string/counselling_details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_text_size" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_nutrition_kit_given"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_kit_given" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_hand_washing_soap_given"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hand_washing_soap_given" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_counselled_about_diet_during_pregnancy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/counselled_about_diet_during_pregnancy" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_counselled_about_hand_wash_and_hygiene"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/counselled_about_hand_wash_and_hygiene" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/counselled_about_treatment_for_anemia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/counselled_about_treatment_for_anemia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:text="@string/nutrition_kit_photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_text_size" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/upload" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/upload"
                        android:textColor="@color/colorPrimary" />
                </TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:text="@string/any_complication"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_text_size" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/radio_group_margin_top"
                    android:background="@drawable/edittext_bg"
                    android:orientation="horizontal"
                    android:padding="@dimen/radio_group_padding">

                    <RadioButton
                        android:id="@+id/rbYesAnyIllness"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbNoAnyIllness"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/no" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:text="@string/complication_note"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_text_size" />

                <EditText
                    style="@style/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_top"
                    android:textSize="@dimen/form_text_size" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/next" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>