<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_80sdp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:src="@drawable/tcsrd" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:src="@drawable/niramay_logo" />

        </TableRow>

        <TextView
            style="@style/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/project_vruddhi"
            android:textColor="@color/white"
            android:textSize="@dimen/_28sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_22sdp"
            android:text="@string/a_holistic_approach_to"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/welcome_to_niramay"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/dedicated_to_improve_"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />


        <Button
            android:id="@+id/btnLogin"
            style="@style/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_38sdp"
            android:text="@string/login" />

    </LinearLayout>
</layout>