<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/toolbar_padding">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/back_arrow_h_w"
            android:layout_height="@dimen/back_arrow_h_w"
            android:contentDescription="@null"
            android:padding="@dimen/back_arrow_padding"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />
    </TableRow>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/form_margin_top"
        android:layout_marginBottom="@dimen/form_margin_top"
        android:contentDescription="@null"
        android:src="@drawable/mailbox" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin_top"
            android:gravity="center_horizontal"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/temp_string"
            android:textColor="@color/black"
            android:textSize="@dimen/form_text_size" />


        <Button
            android:id="@+id/btnBackToLogin"
            style="@style/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:text="@string/back_to_login" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/by_using_niramay"
        android:textColor="@color/lightGray"
        android:textSize="@dimen/form_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/terms_and_privacy_policy"
        android:textColor="@color/lightGray"
        android:textSize="@dimen/form_text_size" />

</LinearLayout>
